--- a/index.html
+++ b/index.html
@@ -45,7 +45,22 @@
               </div>
           </div>
 
-          <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima molestiae nemo perspiciatis autem sed a provident obcaecati vero dolores non.</h2>
+          <div class="container"> 
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                <label class="form-check-label" for="inlineCheckbox1">Men</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                <label class="form-check-label" for="inlineCheckbox2">Women</label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                <label class="form-check-label" for="inlineCheckbox3">Children</label>
+              </div>
+            <a href="#products"><button>Start shopping</button> </a>
+          </div>
+          
 
           <hr>
 
@@ -255,6 +270,20 @@
                 </button>
               </div>
         </div>
+
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <h1 class="display-4">Hello, world!</h1>
+          <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+          <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+          <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            </div>
+        </div>
+
+        <div id="contacts" class="container">
+            <h3>socials</h3>
+        </div>
+        <footer>tori-bot <i class="fa-solid fa-copyright"></i>2022 Victoria Makena</footer>
 
 
 
